# ocptoolkit_bito_ai

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ocp.yml
.github/workflows/: build.yml  publish.yml
cmake/: CPackConfig.cmake  ocptkConfig.cmake.in
configurations/: default.sh
scripts/: prepare.sh  publish_src.sh
src/: CMakeLists.txt  tk.cpp  tk.h
